--- a/demo-01/package.json
+++ b/demo-01/package.json
@@ -2,7 +2,8 @@
   "name": "react-demo",
   "version": "0.0.1",
   "dependencies": {
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
