--- a/demo-03/package.json
+++ b/demo-03/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -22,6 +23,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
     "webpack-dev-server": "^2.6.1"
   }
 }
