--- a/demo-03/package.json
+++ b/demo-03/package.json
@@ -25,6 +25,7 @@
     "webpack": "^3.4.1"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
