--- a/demo-04/package.json
+++ b/demo-04/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
